primera entrega task 2

--- a/contact.html
+++ b/contact.html
@@ -5,25 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+    <link rel="stylesheet" href="/assets/styles/style.css">
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
 </head>
 <body>
     <header>
-        <figure><img src="assets/Logo_Mighty_ducks-01.png" width="50" alt="Mighty ducks logo"></figure>
-        <h1>Mighty Ducks Hockey League</h1>
+        <img id="background" src="assets/design1_image1.jpg"  alt="A kid playing hockey">
+        <h1 id="company-name">Mighty Ducks Hockey League</h1>
+        <h2 id="title">Contact</h2>
+        <img id="logo" src="assets/Logo_Mighty_ducks-01.png" alt="Mighty ducks logo">
     </header>
-    <nav>
-        <a href="./index.html">Home</a> | <a href="./about.html">About</a> | Contact
-    </nav>
+
     <main>
+        <nav>
+            <h4><a href="./index.html">Home</a></h4>
+            <br>
+            <h4><a href="./about.html">About MDHL</a></h4>
+            <br>
+            <h4>Contact</h4>
+        </nav>
         <section>
-            <h5>email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></h5>
+            <h5>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></h5>
             <h5>We reply to your email as soon as we can.</h5>
         </section>
-        <aside>
-            
-            <figure><img src="assets/hockey_3.jpg" width="200" alt="Two kid playing hockey"></figure>
-        </aside>
     </main>
     
 </body>
