--- a/contact.html
+++ b/contact.html
@@ -10,19 +10,24 @@
 </head>
 <body>
     <header>
-        <img id="background" src="assets/design1_image1.jpg"  alt="A kid playing hockey">
         <h1 id="company-name">Mighty Ducks Hockey League</h1>
-        <h2 id="title">Contact</h2>
-        <img id="logo" src="assets/Logo_Mighty_ducks-01.png" alt="Mighty ducks logo">
+        <div class="logo-title-container">
+            <h2 id="title">Contact</h2>
+            <img id="logo" src="assets/Logo_Mighty_ducks-01.png" alt="Mighty ducks logo">
+        </div>
     </header>
 
     <main>
         <nav>
-            <h4><a href="./index.html">Home</a></h4>
+            <a href="./index.html"><button class="link">Home</button></a>
             <br>
-            <h4><a href="./about.html">About MDHL</a></h4>
+            <a href="./about.html"><button class="link">About MDHL</button></a>
             <br>
-            <h4>Contact</h4>
+            <a href="#"><button class="selected">Contact</button></a>
+            <br>
+            <a href="./schedule.html"><button class="link">Game Information</button></a>
+            <br>
+            <a href="./rules.html"><button class="link">Rules</button></a>
         </nav>
         <section>
             <h5>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></h5>
