--- a/schedule.html
+++ b/schedule.html
@@ -21,15 +21,15 @@
         <nav>
             <a href="./index.html"><button class="link">Home</button></a>
             <br>
-            <a href="#"><button class="selected">About MDHL</button></a>
+            <a href="./about.html"><button class="link">About MDHL</button></a>
             <br>
             <a href="./contact.html"><button class="link">Contact</button></a>
             <br>
-            <a href="./schedule.html"><button class="link">Game Information</button></a>
+            <a href="#"><button class="selected">Game Information</button></a>
             <br>
             <a href="./rules.html"><button class="link">Rules</button></a>
         </nav>
-        <section class="long-text-container">
+        <section>
             <h3>Mision</h3>
             <p>
                 <span class="idented">To support young athletes living Chicago's northside neighborhood</span>, who have an interest in
