--- a/about.html
+++ b/about.html
@@ -29,31 +29,46 @@
             <br>
             <a href="./rules.html"><button class="link">Rules</button></a>
         </nav>
-        <section class="long-text-container">
-            <h3>Mision</h3>
-            <p>
-                <span class="idented">To support young athletes living Chicago's northside neighborhood</span>, who have an interest in
-                learning and playing soccer, with opportunities to learn and practice skills related to the game of
-                hockey, specifically those skills around team cooperation and good sportsmanship
-            </p>
+        <section>
+            
+            <article class="slide-container">
+                <h3 class="slide-title">Mision</h3>
+                <img class="slide-image" src="assets/hockey_1.jpg" alt="kids playing hockey">
+                <div class="slide-overlay">
+                    <p class="slide-text">
+                        <span class="idented">To support young athletes living Chicago's northside neighborhood</span>, who have an interest in
+                        learning and playing soccer, with opportunities to learn and practice skills related to the game of
+                        hockey, specifically those skills around team cooperation and good sportsmanship
+                    </p>
+                </div>
+            </article>
+            <article class="slide-container">
+                <h3 class="slide-title">Vision</h3>
+                <img class="slide-image" src="assets/hockey_2.jpg" alt="kids playing hockey">
+                <div class="slide-overlay">
+                    <p class="slide-text">
+                        <span class="idented">The Mighty Ducks Hockey League aspires to develop strong,</span> well-rounded and mindful athletes
+                        through the building of character, self-discipline, and leadership.
+                    </p>
+                </div>
+            </article>
+            <article class="slide-container">
+                <h3 class="slide-title">General Information</h3>
+                <img class="slide-image" src="assets/hockey_3.jpg" alt="kids playing hockey">
+                <div class="slide-overlay">
+                    <p class="slide-text">
+                        <span class="idented">The Mighty Ducks Soccer League was established in 1996 to provide athletes residing</span>
+                        Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a
+                        member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside
+                        neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
+                        parents and previous league members
+                    </p>
+                </div>
 
-            <h3>Vision</h3>
-            <p>
-                <span class="idented">The Mighty Ducks Hockey League aspires to develop strong,</span> well-rounded and mindful athletes
-                through the building of character, self-discipline, and leadership.
-            </p>
-        
-            <h3>
-                General Information
-            </h3>
-            <p>
-                <span class="idented">The Mighty Ducks Soccer League was established in 1996 to provide athletes residing</span>
-                Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a
-                member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside
-                neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
-                parents and previous league members
-            </p>
+            </article>  
+
         </section>
     </main>
+
 </body>
 </html>
