--- a/contact.html
+++ b/contact.html
@@ -29,9 +29,9 @@
             <br>
             <a href="./rules.html"><button class="link">Rules</button></a>
         </nav>
-        <section>
-            <h5>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></h5>
-            <h5>We reply to your email as soon as we can.</h5>
+        <section class="text-container">
+            <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
+            <p>We reply to your email as soon as we can.</p>
         </section>
     </main>
     
