--- a/schedule.html
+++ b/schedule.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Game Information</title>
     <link rel="stylesheet" href="/assets/styles/style.css">
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
 </head>
@@ -12,7 +12,7 @@
     <header>
         <h1 id="company-name">Mighty Ducks Hockey League</h1>
         <div class="logo-title-container">
-            <h2 id="title">About MDHL</h2>
+            <h2 id="title">Game Information</h2>
             <img id="logo" src="assets/Logo_Mighty_ducks-01.png" alt="Mighty ducks logo">
         </div>
     </header>
@@ -20,39 +20,96 @@
     <main>
         <nav>
             <a href="./index.html"><button class="link">Home</button></a>
-            <br>
             <a href="./about.html"><button class="link">About MDHL</button></a>
-            <br>
             <a href="./contact.html"><button class="link">Contact</button></a>
-            <br>
             <a href="#"><button class="selected">Game Information</button></a>
-            <br>
             <a href="./rules.html"><button class="link">Rules</button></a>
         </nav>
-        <section>
-            <h3>Mision</h3>
-            <p>
-                <span class="idented">To support young athletes living Chicago's northside neighborhood</span>, who have an interest in
-                learning and playing soccer, with opportunities to learn and practice skills related to the game of
-                hockey, specifically those skills around team cooperation and good sportsmanship
-            </p>
+        <section class="text-container text-small">
+            <p class="text-small"><u class="remark">*All games take place on Saturday.</u></p>
+            
+            <table>
+                <thead>
+                    <tr>
+                        <th>September</th>
+                        <th>Teams</th>
+                        <th>Location</th>
+                        <th>Times</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td rowspan="2">9/01</td>
+                        <td>U1 and U4</td>
+                        <td>AJ Katzenmaier</td>
+                        <td>9:30a.m.</td>
+                    </tr>
+                    <tr>
+                        <td>U3 and U2</td>
+                        <td>Greenbay</td>
+                        <td>1:00p.m.</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="2">9/08</td>
+                        <td>U5 and U6</td>
+                        <td>Howard A Yeager</td>
+                        <td>9:30a.m.</td>
+                    </tr>
+                    <tr>
+                        <td>U6 and U1</td>
+                        <td>Marjorie P hart</td>
+                        <td>1:00p.m.</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="2">9/15</td>
+                        <td>U2 and U4</td>
+                        <td>North</td>
+                        <td>9:30a.m.</td>
+                    </tr>
+                    <tr>
+                        <td>U3 and U5</td>
+                        <td>AJ Katzenmaier</td>
+                        <td>1:00p.m.</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="2">9/22</td>
+                        <td>U1 and U3</td>
+                        <td>South</td>
+                        <td>9:30p.m.</td>
+                    </tr>
+                    <tr>
+                        <td>U2 U6</td>
+                        <td>Howard A Yeager</td>
+                        <td>1:00p.m.</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="1">9/29</td>
+                        <td>U4 and U5</td>
+                        <td>Greenbay</td>
+                        <td>9:30a.m.</td>
+                    </tr>
+                </tbody>
+            </table>
 
-            <h3>Vision</h3>
             <p>
-                <span class="idented">The Mighty Ducks Hockey League aspires to develop strong,</span> well-rounded and mindful athletes
-                through the building of character, self-discipline, and leadership.
+                <b>Facility Type:</b> outdoor
             </p>
-        
-            <h3>
-                General Information
-            </h3>
             <p>
-                <span class="idented">The Mighty Ducks Soccer League was established in 1996 to provide athletes residing</span>
-                Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a
-                member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside
-                neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
-                parents and previous league members
+                <b>Aditional Information:</b> If deemed necesary by MDHL, games may be shortened
+                or cancelled due to extreme weather conditions.
             </p>
+            <p>
+                <b>Please direct all questions to:</b> Michael Randall, League Coordinator
+            </p>
+            <div class="inline-paragraphs">
+                <p>
+                    <b>Phone: </b>(630)690-8132
+                </p>
+                <p>
+                    <b>Email: </b>michael.randall@chihockey.org
+                </p>
+            </div>
+
         </section>
     </main>
 </body>
