--- a/contact.html
+++ b/contact.html
@@ -19,16 +19,17 @@
 
     <main>
         <nav>
-            <a href="./index.html"><button class="link">Home</button></a>
-            <a href="./about.html"><button class="link">About MDHL</button></a>
-            <a href="#"><button class="selected">Contact</button></a>
-            <a href="./schedule.html"><button class="link">Game Information</button></a>
-            <a href="./rules.html"><button class="link">Rules</button></a>
+            <div class="button link"><a href="./index.html" class="navbutton">Home</a></div>
+            <div class="button link"><a href="./about.html" class="navbutton">About MDHL</a></div>
+            <div class="button selected"><a href="#">Contact</a></div>
+            <div class="button link"><a href="./schedule.html" class="navbutton">Game Information</a></div>
+            <div class="button link"><a href="./rules.html" class="navbutton">Rules</a></div>
         </nav>
-        <section class="text-container">
+        <div class="section text-container">
+            <img src="./assets/design2_image1.jpg" alt="a hockey game">
             <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
             <p>We reply to your email as soon as we can.</p>
-        </section>
+        </div>
     </main>
     
 </body>
