--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     
     <main>
         <nav>
-            <a href="#"><button class="selected">Home</button></a>
-            <a href="./about.html"><button class="link">About MDHL</button></a>
-            <a href="./contact.html"><button class="link">Contact</button></a>
-            <a href="./schedule.html"><button class="link">Game Information</button></a>
-            <a href="./rules.html"><button class="link">Rules</button></a>
+            <div class="button selected"><a href="#">Home</a></div>
+            <div class="button link"><a href="./about.html" class="navbutton">About MDHL</a></div>
+            <div class="button link"><a href="./contact.html" class="navbutton">Contact</a></div>
+            <div class="button link"><a href="./schedule.html" class="navbutton">Game Information</a></div>
+            <div class="button link"><a href="./rules.html" class="navbutton">Rules</a></div>
         </nav>
-        <section>
+        <div class="section">
             <article>
                 <img class="card-image" src="assets/hockey_1.jpg" alt="kids playing hockey">
                 <div class="card-containter">
@@ -50,7 +50,7 @@
                     <p class="idented">First Game of the Season (Check Game Information for details)</p>
                 </div>
             </article>
-        </section>
+        </div>
     </main>
     
 </body>
