--- a/about.html
+++ b/about.html
@@ -19,13 +19,13 @@
     
     <main>
         <nav>
-            <a href="./index.html"><button class="link">Home</button></a>
-            <a href="#"><button class="selected">About MDHL</button></a>
-           <a href="./contact.html"><button class="link">Contact</button></a>
-            <a href="./schedule.html"><button class="link">Game Information</button></a>
-            <a href="./rules.html"><button class="link">Rules</button></a>
+            <div class="link button"><a href="./index.html" class="navbutton">Home</a></div>
+            <div class="selected button"><a href="#">About MDHL</a></div>
+            <div class="link button"><a href="./contact.html" class="navbutton">Contact</a></div>
+            <div class="link button"><a href="./schedule.html" class="navbutton">Game Information</a></div>
+            <div class="link button"><a href="./rules.html" class="navbutton">Rules</a></div>
         </nav>
-        <section>
+        <div class="section">
             
             <article class="slide-container">
                 <h3 class="slide-title">Mision</h3>
@@ -63,7 +63,7 @@
 
             </article>  
 
-        </section>
+        </div>
     </main>
 
 </body>
