--- a/schedule.html
+++ b/schedule.html
@@ -19,13 +19,13 @@
     
     <main>
         <nav>
-            <a href="./index.html"><button class="link">Home</button></a>
-            <a href="./about.html"><button class="link">About MDHL</button></a>
-            <a href="./contact.html"><button class="link">Contact</button></a>
-            <a href="#"><button class="selected">Game Information</button></a>
-            <a href="./rules.html"><button class="link">Rules</button></a>
+            <div class="button link"><a href="./index.html" class="navbutton">Home</a></div>
+            <div class="button link"><a href="./about.html" class="navbutton">About MDHL</a></div>
+            <div class="button link"><a href="./contact.html" class="navbutton">Contact</a></div>
+            <div class="button selected"><a href="#">Game Information</a></div>
+            <div class="button link"><a href="./rules.html" class="navbutton">Rules</a></div>
         </nav>
-        <section class="text-container text-small">
+        <div class="text-container text-small">
             <p class="text-small"><u class="remark">*All games take place on Saturday.</u></p>
             
             <table>
@@ -110,7 +110,7 @@
                 </p>
             </div>
 
-        </section>
+        </div>
     </main>
 </body>
 </html>
