ahora si los nombres arreglados TT_TT

--- a/game_info.html
+++ b/game_info.html
@@ -20,10 +20,11 @@
     <main>
         <nav>
             <div class="button link"><a href="./index.html" class="navbutton">Home</a></div>
-            <div class="button link"><a href="./about.html" class="navbutton">About MDHL</a></div>
+            <div class="button link"><a href="./about_MDHL.html" class="navbutton">About MDHL</a></div>
             <div class="button link"><a href="./contact.html" class="navbutton">Contact</a></div>
             <div class="button selected"><a href="#">Game Information</a></div>
             <div class="button link"><a href="./rules.html" class="navbutton">Rules</a></div>
+            
         </nav>
         <div class="text-container text-small">
             <p class="text-small"><u class="remark">*All games take place on Saturday.</u></p>
