--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
     <main>
         <nav>
             <div class="button selected"><a href="#">Home</a></div>
-            <div class="button link"><a href="./about.html" class="navbutton">About MDHL</a></div>
+            <div class="button link"><a href="./about_MDHL.html" class="navbutton">About MDHL</a></div>
             <div class="button link"><a href="./contact.html" class="navbutton">Contact</a></div>
-            <div class="button link"><a href="./schedule.html" class="navbutton">Game Information</a></div>
-            <div class="button link"><a href="./rules.html" class="navbutton">Rules</a></div>
+            <div class="button link"><a href="./game_info.html" class="navbutton">Game Information</a></div>
+            <div class="button link"><a href="./game_info.html" class="navbutton">Rules</a></div>
+            
         </nav>
         <div class="section">
             <article>
