--- a/about_MDHL.html
+++ b/about_MDHL.html
@@ -22,8 +22,9 @@
             <div class="link button"><a href="./index.html" class="navbutton">Home</a></div>
             <div class="selected button"><a href="#">About MDHL</a></div>
             <div class="link button"><a href="./contact.html" class="navbutton">Contact</a></div>
-            <div class="link button"><a href="./schedule.html" class="navbutton">Game Information</a></div>
+            <div class="link button"><a href="./game_info.html" class="navbutton">Game Information</a></div>
             <div class="link button"><a href="./rules.html" class="navbutton">Rules</a></div>
+            
         </nav>
         <div class="section">
             
