--- a/contact.html
+++ b/contact.html
@@ -20,10 +20,11 @@
     <main>
         <nav>
             <div class="button link"><a href="./index.html" class="navbutton">Home</a></div>
-            <div class="button link"><a href="./about.html" class="navbutton">About MDHL</a></div>
+            <div class="button link"><a href="./about_MDHL.html" class="navbutton">About MDHL</a></div>
             <div class="button selected"><a href="#">Contact</a></div>
-            <div class="button link"><a href="./schedule.html" class="navbutton">Game Information</a></div>
+            <div class="button link"><a href="./game_info.html" class="navbutton">Game Information</a></div>
             <div class="button link"><a href="./rules.html" class="navbutton">Rules</a></div>
+            
         </nav>
         <div class="section text-container">
             <img src="./assets/design2_image1.jpg" alt="a hockey game">
