--- a/rules.html
+++ b/rules.html
@@ -20,10 +20,11 @@
     <main>
         <nav>
             <div class="button link"><a href="./index.html" class="navbutton">Home</a></div>
-            <div class="button link"><a href="./about.html" class="navbutton">About MDHL</a></div>
+            <div class="button link"><a href="./about_MDHL.html" class="navbutton">About MDHL</a></div>
             <div class="button link"><a href="./contact.html" class="navbutton">Contact</a></div>
-            <div class="button link"><a href="./schedule.html" class="navbutton">Game Information</a></div>
+            <div class="button link"><a href="./game_info.html" class="navbutton">Game Information</a></div>
             <div class="button selected"><a href="#">Rules</a></div>
+            
         </nav>
         <div class="section text-container">
             <p>IHF rules shall govern MDHL play except as modified herein.</p>
