--- a/about_MDHL.html
+++ b/about_MDHL.html
@@ -24,7 +24,7 @@
             <div class="link button"><a href="./contact.html" class="navbutton">Contact</a></div>
             <div class="link button"><a href="./game_info.html" class="navbutton">Game Information</a></div>
             <div class="link button"><a href="./rules.html" class="navbutton">Rules</a></div>
-            
+            <div class="button link"><a href="./registration_form.html" class="navbutton">Registration Form</a></div>
         </nav>
         <div class="section">
             
