--- a/game_info.html
+++ b/game_info.html
@@ -24,7 +24,7 @@
             <div class="button link"><a href="./contact.html" class="navbutton">Contact</a></div>
             <div class="button selected"><a href="#">Game Information</a></div>
             <div class="button link"><a href="./rules.html" class="navbutton">Rules</a></div>
-            
+            <div class="button link"><a href="./registration_form.html" class="navbutton">Registration Form</a></div>
         </nav>
         <div class="text-container text-small">
             <p class="text-small"><u class="remark">*All games take place on Saturday.</u></p>
