--- a/rules.html
+++ b/rules.html
@@ -24,7 +24,7 @@
             <div class="button link"><a href="./contact.html" class="navbutton">Contact</a></div>
             <div class="button link"><a href="./game_info.html" class="navbutton">Game Information</a></div>
             <div class="button selected"><a href="#">Rules</a></div>
-            
+            <div class="button link"><a href="./registration_form.html" class="navbutton">Registration Form</a></div>
         </nav>
         <div class="section text-container">
             <p>IHF rules shall govern MDHL play except as modified herein.</p>
