todo funcionando...creo...almenos el html

--- a/game_info.html
+++ b/game_info.html
@@ -42,51 +42,51 @@
                     <tr>
                         <td rowspan="2">9/01</td>
                         <td>U1 and U4</td>
-                        <td>AJ Katzenmaier</td>
+                        <td class="location"><p>AJ Katzenmaier</p><a href="#AJK"><img id="map-icon" src="assets/Maps-icon.png" alt="map-icon"></a></td>
                         <td>9:30a.m.</td>
                     </tr>
                     <tr>
                         <td>U3 and U2</td>
-                        <td>Greenbay</td>
+                        <td class="location"><p>Greenbay</p><a href="#GBY"><img id="map-icon" src="assets/Maps-icon.png" alt="map-icon"></a></td>
                         <td>1:00p.m.</td>
                     </tr>
                     <tr>
                         <td rowspan="2">9/08</td>
                         <td>U5 and U6</td>
-                        <td>Howard A Yeager</td>
+                        <td class="location"><p>Howard A Yeager</p><a href="#HAY"><img id="map-icon" src="assets/Maps-icon.png" alt="map-icon"></a></td>
                         <td>9:30a.m.</td>
                     </tr>
                     <tr>
                         <td>U6 and U1</td>
-                        <td>Marjorie P hart</td>
+                        <td class="location"><p>Marjorie P hart</p><a href="#MPH"><img id="map-icon" src="assets/Maps-icon.png" alt="map-icon"></a></td>
                         <td>1:00p.m.</td>
                     </tr>
                     <tr>
                         <td rowspan="2">9/15</td>
                         <td>U2 and U4</td>
-                        <td>North</td>
+                        <td class="location"><p>North</p><a href="#NTE"><img id="map-icon" src="assets/Maps-icon.png" alt="map-icon"></a></td>
                         <td>9:30a.m.</td>
                     </tr>
                     <tr>
                         <td>U3 and U5</td>
-                        <td>AJ Katzenmaier</td>
+                        <td class="location"><p>AJ Katzenmaier</p><a href="#AJK"><img id="map-icon" src="assets/Maps-icon.png" alt="map-icon"></a></td>
                         <td>1:00p.m.</td>
                     </tr>
                     <tr>
                         <td rowspan="2">9/22</td>
                         <td>U1 and U3</td>
-                        <td>South</td>
+                        <td class="location"><p>South</p><a href="#STE"><img id="map-icon" src="assets/Maps-icon.png" alt="map-icon"></a></td>
                         <td>9:30p.m.</td>
                     </tr>
                     <tr>
                         <td>U2 U6</td>
-                        <td>Howard A Yeager</td>
+                        <td class="location"><p>Howard A Yeager</p><a href="#HAY"><img id="map-icon" src="assets/Maps-icon.png" alt="map-icon"></a></td>
                         <td>1:00p.m.</td>
                     </tr>
                     <tr>
                         <td rowspan="1">9/29</td>
                         <td>U4 and U5</td>
-                        <td>Greenbay</td>
+                        <td class="location"><p>Greenbay</p><a href="#GBY"><img id="map-icon" src="assets/Maps-icon.png" alt="map-icon"></a></td>
                         <td>9:30a.m.</td>
                     </tr>
                 </tbody>
@@ -110,7 +110,33 @@
                     <b>Email: </b>michael.randall@chihockey.org
                 </p>
             </div>
-
+            <div class="map-section">
+                <div id="AJK" class="map-container">
+                    <h3>AJ Katzenmaier</h3>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2949.7804581651108!2d-87.86499328516892!3d42.325881145253085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f932fbc6ba7cd%3A0xcf2bbe275c6da815!2sAJ%20Katzenmaier%20Academy!5e0!3m2!1ses-419!2sar!4v1676642872084!5m2!1ses-419!2sar" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div id="GBY" class="map-container">
+                    <h3>Greenbay</h3>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2846.3218110765165!2d-87.96945038508768!3d44.4880724060622!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8802e5c920d03d8d%3A0xc984ec52edd1f56a!2sGreen%20Bay%20Academy!5e0!3m2!1ses-419!2sar!4v1676643135319!5m2!1ses-419!2sar"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div id="HAY" class="map-container">
+                    <h3>Howard A Yeager</h3>
+                    
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.2698766737694!2d-87.85606978516934!3d42.31544224591187!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac26b07c5%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses-419!2sar!4v1676643200635!5m2!1ses-419!2sar" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div id="MPH" class="map-container">
+                    <h3>Marjorie P Hart</h3>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2968.289653643584!2d-87.64816138518344!3d41.929626870168214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd30f2637f9d7%3A0xdbff5d5dfcfcfa35!2sMarjorie%20P%20Hart%20Elementary!5e0!3m2!1ses-419!2sar!4v1676643776357!5m2!1ses-419!2sar"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div id="NTE" class="map-container">
+                    <h3>North Elementary</h3>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.590378843436!2d-87.98684777304688!3d41.901665699999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e4d32acf1269f%3A0xd5e750e2e3c30d09!2sNorth%20Elementary%20School!5e0!3m2!1ses-419!2sar!4v1676644137183!5m2!1ses-419!2sar"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div id="STE" class="map-container">
+                    <h3>South Elementary</h3>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2924397.362820977!2d-90.20423408655985!3d44.29233373997827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac2135a21%3A0x8ce88e90b96bbec1!2sSouth%20Elementary%20School%20(K-5)!5e0!3m2!1ses-419!2sar!4v1676644294531!5m2!1ses-419!2sar"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
         </div>
     </main>
 </body>
