--- a/registration_form.html
+++ b/registration_form.html
@@ -12,7 +12,7 @@
     <header>
         <h1 id="company-name">Mighty Ducks Hockey League</h1>
         <div class="logo-title-container">
-            <h2 id="title">Contact</h2>
+            <h2 id="title">registration Form</h2>
             <img id="logo" src="assets/Logo_Mighty_ducks-01.png" alt="Mighty ducks logo">
         </div>
     </header>
@@ -27,6 +27,112 @@
             <div class="button link"><a href="./registration_form.html" class="navbutton">Registration Form</a></div>
         </nav>
         <div class="section text-container">
+            <form action="show_data.html" method="get">
+                <label for="fname">Player's First Name:</label>
+                <input id="fname" required name="fname" type="text">
+                <label for="lname">Last Name:</label>
+                <input id="lname" required name="lname" type="text">
+                <label for="adress">Street Adress:</label>
+                <input id="adress" required name="adress" type="text">
+                <label for="city">City: </label>
+                <input id="city" required name="city" type="text">
+                <label for="zip-code">Zip Code:</label>
+                <input id="zip-code" required name="zip-code" type="text">
+                <label for="birthday">Birth Date:</label>
+                <input id="birthday" required name="birthday" type="date">
+                <div>
+                    <h3>Gender:</h3>
+                    <fieldset>
+                        <input  type="radio" id="gmale" name="gender" value="male">
+                        <label for="gmale">male</label>
+                        <input  type="radio" id="gfemale" name="gender" value="female">
+                        <label for="gfemale">female</label>
+                    </fieldset>
+                </div>
+                <div>
+                    <h3>Grade:</h3>
+                    <fieldset>
+                        <input type="radio" id="pre-school" name="grade" value="pre-school">
+                        <label for="pre-school">Pre-School</label>
+                        <input type="radio" id="1st" name="grade" value="1st">
+                        <label for="1st">1st</label>
+                        <input type="radio" id="2nd" name="grade" value="2nd">
+                        <label for="2nd">2nd</label>
+                        <input type="radio" id="3rd" name="grade" value="3rd">
+                        <label for="3rd">3rd</label>
+                        <input type="radio" id="4th" name="grade" value="4th">
+                        <label for="4th">4th</label>
+                        <input type="radio" id="5th" name="grade" value="5th">
+                        <label for="5th">5th</label>
+                    </fieldset>
+                </div>
+                <div>
+                    <h3>Which elementary School do you live near?</h3>
+                    <h4>Closest School</h4>
+                    <fieldset>
+                        <input type="radio" id="AJ-Katzenmaier" name="school" value="AJ-Katzenmaier" required>
+                        <label for="AJ-Katzenmaier">AJ-Katzenmaier</label>
+                        <input type="radio" id="Greenbay" name="school"  value="Greenbay">
+                        <label for="Greenbay">Greenbay</label>
+                        <input type="radio" id="HowardAYeager" name="school" value="Howard A Yeager">
+                        <label for="HowardAYeager">Howard A Yeager</label>
+                        <input type="radio" id="MarjoriePHart" name="school" value="Marjorie P Hart">
+                        <label for="MarjoriePHart">Marjorie P Hart</label>
+                        <input type="radio" id="NorthElementary" name="school" value="North Elementary">
+                        <label for="NorthElementary">North Elementary</label>
+                        <input type="radio" id="SouthElementary" name="school" value="South Elementary">
+                        <label for="SouthElementary">South Elementary</label>
+                    </fieldset>
+                </div>
+                <div>
+                    <h3>What position(s) do you normally play?(check all that apply)</h3>
+                    <fieldset>
+                        <input type="checkbox" id="Forward" name="position" value="Forward" required>
+                        <label for="Forward">Forward</label>
+                        <input type="checkbox" id="Defense" name="position" value="Defense">
+                        <label for="Defense">Defense</label>
+                        <input type="checkbox" id="Midfield" name="position" value="Midfield">
+                        <label for="Midfield">Midfield</label>
+                        <input type="checkbox" id="GoalKeeper" name="position" value="GoalKeeper">
+                        <label for="GoalKeeper">GoalKeeper</label>
+                    </fieldset>
+                </div>
+                <div>
+                    <h3>Uniform Size:</h3>
+                    <fieldset>
+                        <input type="radio"  id="ysmall" name="size" value="youth-small" required>
+                        <label for="ysmall">Youth Small</label>
+                        <input type="radio"  id="ymedium" name="size" value="youth-medium">
+                        <label for="ymedium">Youth Medium</label>
+                        <input type="radio"  id="ylarge" name="size" value="youth-large">
+                        <label for="ylarge">Youth Large</label>
+                        <input type="radio"  id="small" name="size" value="small">
+                        <label for="small">Small</label>
+                        <input type="radio"  id="medium" name="size" value="medium">
+                        <label for="medium">Medium</label>
+                        <input type="radio"  id="large" name="size" value="large">
+                        <label for="large">Large</label>
+                        <input type="radio"  id="elarge" name="size" value="extra-large">
+                        <label for="elarge">Extra Large</label>
+                    </fieldset>
+                </div>
+                <h3>Permission to Play</h3>
+                <p>I, the parent or guardian of the minor registrant agree that the registrant and I will abide by all 
+                    the rules of the Mighty Ducks Hockey League (MDHL). In recognizing the possibility of physical injury
+                    associated with hockey and in consideration for the "League" accepting the registrant for its hockey programs
+                    and activities, I hereby release, discharge, and/or otherwise indemnify MDHL, their employees and associated 
+                    personnel and volunteers, including the facilities used for practices and games, against any claim by or on behalf
+                    of the registrant as a result of the registrant's participation in the program/or being transported to or from MDHL 
+                    sponsored activities, which transportation
+                    By singing below, I hereby agree and authorize the above. In adition, by signing below, I also acknowledge that I have 
+                    read the cancellation policy and agree to its terms.
+                </p>
+                <label for="parent-signature">Parent/Guardian Name</label>
+                <input type="text" id="parent-signature" required name="parent-signature">
+                <label for="signature-date">Date:</label>
+                <input type="date" id="signature-date" required name="signature-date">
+                <button class="">Register</button>
+            </form>
         </div>
     </main>
     
