--- a/registration_form.html
+++ b/registration_form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Registration form</title>
     <link rel="stylesheet" href="/assets/styles/style.css">
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
 </head>
@@ -87,7 +87,7 @@
                 <div>
                     <h3>What position(s) do you normally play?(check all that apply)</h3>
                     <fieldset>
-                        <input type="checkbox" id="Forward" name="position" value="Forward" required>
+                        <input type="checkbox" id="Forward" name="position" value="Forward">
                         <label for="Forward">Forward</label>
                         <input type="checkbox" id="Defense" name="position" value="Defense">
                         <label for="Defense">Defense</label>
@@ -131,7 +131,7 @@
                 <input type="text" id="parent-signature" required name="parent-signature">
                 <label for="signature-date">Date:</label>
                 <input type="date" id="signature-date" required name="signature-date">
-                <button class="">Register</button>
+                <button class="form-button">Register</button>
             </form>
         </div>
     </main>
