--- a/game_info.html
+++ b/game_info.html
@@ -42,51 +42,51 @@
                     <tr>
                         <td rowspan="2">9/01</td>
                         <td>U1 and U4</td>
-                        <td class="location"><p>AJ Katzenmaier</p><a href="#AJK"><img id="map-icon" src="assets/Maps-icon.png" alt="map-icon"></a></td>
+                        <td class="location"><p>AJ Katzenmaier</p><a href="#AJK"><img class="map-icon" src="assets/Maps-icon.png" alt="map-icon"></a></td>
                         <td>9:30a.m.</td>
                     </tr>
                     <tr>
                         <td>U3 and U2</td>
-                        <td class="location"><p>Greenbay</p><a href="#GBY"><img id="map-icon" src="assets/Maps-icon.png" alt="map-icon"></a></td>
+                        <td class="location"><p>Greenbay</p><a href="#GBY"><img class="map-icon" src="assets/Maps-icon.png" alt="map-icon"></a></td>
                         <td>1:00p.m.</td>
                     </tr>
                     <tr>
                         <td rowspan="2">9/08</td>
                         <td>U5 and U6</td>
-                        <td class="location"><p>Howard A Yeager</p><a href="#HAY"><img id="map-icon" src="assets/Maps-icon.png" alt="map-icon"></a></td>
+                        <td class="location"><p>Howard A Yeager</p><a href="#HAY"><img class="map-icon" src="assets/Maps-icon.png" alt="map-icon"></a></td>
                         <td>9:30a.m.</td>
                     </tr>
                     <tr>
                         <td>U6 and U1</td>
-                        <td class="location"><p>Marjorie P hart</p><a href="#MPH"><img id="map-icon" src="assets/Maps-icon.png" alt="map-icon"></a></td>
+                        <td class="location"><p>Marjorie P hart</p><a href="#MPH"><img class="map-icon" src="assets/Maps-icon.png" alt="map-icon"></a></td>
                         <td>1:00p.m.</td>
                     </tr>
                     <tr>
                         <td rowspan="2">9/15</td>
                         <td>U2 and U4</td>
-                        <td class="location"><p>North</p><a href="#NTE"><img id="map-icon" src="assets/Maps-icon.png" alt="map-icon"></a></td>
+                        <td class="location"><p>North</p><a href="#NTE"><img class="map-icon" src="assets/Maps-icon.png" alt="map-icon"></a></td>
                         <td>9:30a.m.</td>
                     </tr>
                     <tr>
                         <td>U3 and U5</td>
-                        <td class="location"><p>AJ Katzenmaier</p><a href="#AJK"><img id="map-icon" src="assets/Maps-icon.png" alt="map-icon"></a></td>
+                        <td class="location"><p>AJ Katzenmaier</p><a href="#AJK"><img class="map-icon" src="assets/Maps-icon.png" alt="map-icon"></a></td>
                         <td>1:00p.m.</td>
                     </tr>
                     <tr>
                         <td rowspan="2">9/22</td>
                         <td>U1 and U3</td>
-                        <td class="location"><p>South</p><a href="#STE"><img id="map-icon" src="assets/Maps-icon.png" alt="map-icon"></a></td>
+                        <td class="location"><p>South</p><a href="#STE"><img class="map-icon" src="assets/Maps-icon.png" alt="map-icon"></a></td>
                         <td>9:30p.m.</td>
                     </tr>
                     <tr>
                         <td>U2 U6</td>
-                        <td class="location"><p>Howard A Yeager</p><a href="#HAY"><img id="map-icon" src="assets/Maps-icon.png" alt="map-icon"></a></td>
+                        <td class="location"><p>Howard A Yeager</p><a href="#HAY"><img class="map-icon" src="assets/Maps-icon.png" alt="map-icon"></a></td>
                         <td>1:00p.m.</td>
                     </tr>
                     <tr>
                         <td rowspan="1">9/29</td>
                         <td>U4 and U5</td>
-                        <td class="location"><p>Greenbay</p><a href="#GBY"><img id="map-icon" src="assets/Maps-icon.png" alt="map-icon"></a></td>
+                        <td class="location"><p>Greenbay</p><a href="#GBY"><img class="map-icon" src="assets/Maps-icon.png" alt="map-icon"></a></td>
                         <td>9:30a.m.</td>
                     </tr>
                 </tbody>
@@ -117,7 +117,7 @@
                 </div>
                 <div id="GBY" class="map-container">
                     <h3>Greenbay</h3>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2846.3218110765165!2d-87.96945038508768!3d44.4880724060622!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8802e5c920d03d8d%3A0xc984ec52edd1f56a!2sGreen%20Bay%20Academy!5e0!3m2!1ses-419!2sar!4v1676643135319!5m2!1ses-419!2sar"  allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2846.3218110765165!2d-87.96945038508768!3d44.4880724060622!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8802e5c920d03d8d%3A0xc984ec52edd1f56a!2sGreen%20Bay%20Academy!5e0!3m2!1ses-419!2sar!4v1676643135319!5m2!1ses-419!2sar"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
                 <div id="HAY" class="map-container">
                     <h3>Howard A Yeager</h3>
